@@ -1,3 +1,6 @@
+2000-05-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* usecode.cc: implemented intrinsic 0x09 (clear_answers)
+
 2000-05-24  Tristan Tarrant  <tarrant_tristan@emc.com>
 
 	* usecode.cc: call endgame
